# gb4-wiki-gen

./: .gitignore  README.md  data_structures.md  pyproject.toml
gb4_wiki_gen/: cli.py  client.py  database.py  generate.py  models.py  utils.py  wiki_client.py
gb4_wiki_gen/generator/: equip_page.py  kit_page.py  suit_page.py
gb4_wiki_gen/templates/: __init__.py  equip_page.jinja2  kit_page.jinja2  suit_page.jinja2
